@@ -18,7 +18,7 @@
 
 package net.frozenblock.wilderwild.world.additions.feature;
 
-import com.google.common.collect.ImmutableList;
+import java.util.List;
 import java.util.Optional;
 import java.util.OptionalInt;
 import net.frozenblock.lib.worldgen.feature.api.FrozenConfiguredFeature;
@@ -40,6 +40,7 @@ import net.frozenblock.wilderwild.world.generation.trunk.FallenTrunkWithLogs;
 import net.frozenblock.wilderwild.world.generation.trunk.FancyDarkOakTrunkPlacer;
 import net.frozenblock.wilderwild.world.generation.trunk.JuniperTrunkPlacer;
 import net.frozenblock.wilderwild.world.generation.trunk.PalmTrunkPlacer;
+import net.frozenblock.wilderwild.world.generation.trunk.SnappedTrunkPlacer;
 import net.frozenblock.wilderwild.world.generation.trunk.StraightTrunkWithLogs;
 import net.minecraft.core.Direction;
 import net.minecraft.core.HolderSet;
@@ -162,6 +163,8 @@ public final class WilderTreeConfigured {
 
 	public static final FrozenConfiguredFeature<TreeConfiguration, ConfiguredFeature<TreeConfiguration, ?>> SUPER_BIRCH = register("super_birch");
 
+	public static final FrozenConfiguredFeature<TreeConfiguration, ConfiguredFeature<TreeConfiguration, ?>> SNAPPED_BIRCH = register("snapped_birch");
+
     //OAK
     public static final FrozenConfiguredFeature<TreeConfiguration, ConfiguredFeature<TreeConfiguration, ?>> OAK = register("oak");
 
@@ -194,6 +197,8 @@ public final class WilderTreeConfigured {
 	public static final FrozenConfiguredFeature<TreeConfiguration, ConfiguredFeature<TreeConfiguration, ?>> FANCY_OAK_BEES = register("fancy_oak_bees");
 
 	public static final FrozenConfiguredFeature<TreeConfiguration, ConfiguredFeature<TreeConfiguration, ?>> OLD_FANCY_DYING_OAK_BEES_0004 = register("old_fancy_dying_oak_bees_0004");
+
+	public static final FrozenConfiguredFeature<TreeConfiguration, ConfiguredFeature<TreeConfiguration, ?>> SNAPPED_OAK = register("snapped_oak");
 
 	//DARK OAK
     public static final FrozenConfiguredFeature<TreeConfiguration, ConfiguredFeature<TreeConfiguration, ?>> DYING_DARK_OAK = register("dying_dark_oak");
@@ -240,6 +245,8 @@ public final class WilderTreeConfigured {
 
 	public static final FrozenConfiguredFeature<TreeConfiguration, ConfiguredFeature<TreeConfiguration, ?>> SHORT_MEGA_DYING_SPRUCE = register("short_mega_dying_spruce");
 
+	public static final FrozenConfiguredFeature<TreeConfiguration, ConfiguredFeature<TreeConfiguration, ?>> SNAPPED_SPRUCE = register("snapped_spruce");
+
 	//BAOBAB
     public static final FrozenConfiguredFeature<TreeConfiguration, ConfiguredFeature<TreeConfiguration, ?>> BAOBAB = register("baobab");
 
@@ -257,6 +264,8 @@ public final class WilderTreeConfigured {
     public static final FrozenConfiguredFeature<TreeConfiguration, ConfiguredFeature<TreeConfiguration, ?>> SHORT_FUNGUS_CYPRESS = register("short_fungus_cypress");
 
     public static final FrozenConfiguredFeature<TreeConfiguration, ConfiguredFeature<TreeConfiguration, ?>> SWAMP_CYPRESS = register("swamp_cypress");
+
+	public static final FrozenConfiguredFeature<TreeConfiguration, ConfiguredFeature<TreeConfiguration, ?>> SNAPPED_CYPRESS = register("snapped_cypress");
 
 	//BIG SHRUB
 	public static final FrozenConfiguredFeature<TreeConfiguration, ConfiguredFeature<TreeConfiguration, ?>> BIG_SHRUB = register("big_shrub");
@@ -278,8 +287,12 @@ public final class WilderTreeConfigured {
 	//JUNGLE
 	public static final FrozenConfiguredFeature<TreeConfiguration, ConfiguredFeature<TreeConfiguration, ?>> FALLEN_JUNGLE_TREE = register("fallen_jungle_tree");
 
+	public static final FrozenConfiguredFeature<TreeConfiguration, ConfiguredFeature<TreeConfiguration, ?>> SNAPPED_JUNGLE = register("snapped_jungle");
+
 	//ACACIA
 	public static final FrozenConfiguredFeature<TreeConfiguration, ConfiguredFeature<TreeConfiguration, ?>> FALLEN_ACACIA_TREE = register("fallen_acacia_tree");
+
+	public static final FrozenConfiguredFeature<TreeConfiguration, ConfiguredFeature<TreeConfiguration, ?>> SNAPPED_ACACIA = register("snapped_acacia");
 
 	//MANGROVE
 	public static final FrozenConfiguredFeature<TreeConfiguration, ConfiguredFeature<TreeConfiguration, ?>> FALLEN_MANGROVE_TREE = register("fallen_mangrove_tree");
@@ -292,7 +305,7 @@ public final class WilderTreeConfigured {
 
 		BIRCH_TREE.makeAndSetHolder(Feature.TREE,
 				birch().dirt(BlockStateProvider.simple(Blocks.DIRT)).decorators(
-						ImmutableList.of(
+						List.of(
 								SHELF_FUNGUS_007
 						)
 				).build()
@@ -300,7 +313,7 @@ public final class WilderTreeConfigured {
 
 		BIRCH_BEES_0004.makeAndSetHolder(Feature.TREE,
 				birch().decorators(
-						ImmutableList.of(
+						List.of(
 								BEES_0004,
 								SHELF_FUNGUS_007,
 								POLLEN_01
@@ -310,7 +323,7 @@ public final class WilderTreeConfigured {
 
 		BIRCH_BEES_025.makeAndSetHolder(Feature.TREE,
 				birch().decorators(
-						ImmutableList.of(
+						List.of(
 								BEES_025,
 								SHELF_FUNGUS_007,
 								POLLEN_025
@@ -320,7 +333,7 @@ public final class WilderTreeConfigured {
 
 		DYING_BIRCH.makeAndSetHolder(Feature.TREE,
 				birch().decorators(
-						ImmutableList.of(
+						List.of(
 								BEES_0004,
 								SHELF_FUNGUS_007
 						)
@@ -329,7 +342,7 @@ public final class WilderTreeConfigured {
 
 		SHORT_BIRCH_BEES_0004.makeAndSetHolder(Feature.TREE,
 				shortBirch().decorators(
-						ImmutableList.of(
+						List.of(
 								BEES_0004,
 								SHELF_FUNGUS_006,
 								POLLEN_01)
@@ -338,7 +351,7 @@ public final class WilderTreeConfigured {
 
 		SUPER_BIRCH_BEES_0004.makeAndSetHolder(Feature.TREE,
 				superBirch().decorators(
-						ImmutableList.of(
+						List.of(
 								BEES_0004,
 								SHELF_FUNGUS_007,
 								POLLEN_01)
@@ -347,7 +360,7 @@ public final class WilderTreeConfigured {
 
 		DYING_SUPER_BIRCH.makeAndSetHolder(Feature.TREE,
 				superBirch().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_1_UNDER_260_05,
 								SHELF_FUNGUS_007
 						)
@@ -356,7 +369,7 @@ public final class WilderTreeConfigured {
 
 		FALLEN_BIRCH_TREE.makeAndSetHolder(Feature.TREE,
 				fallenBirch().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_08_UNDER_260_075,
 								MOSS_BIRCH
 						)
@@ -365,7 +378,7 @@ public final class WilderTreeConfigured {
 
 		MOSSY_FALLEN_BIRCH_TREE.makeAndSetHolder(Feature.TREE,
 				fallenTrunkBuilder(
-						RegisterBlocks.HOLLOWED_BIRCH_LOG,
+						Blocks.BIRCH_LOG,
 						Blocks.BIRCH_LEAVES,
 						3,
 						1,
@@ -375,7 +388,7 @@ public final class WilderTreeConfigured {
 						UniformInt.of(1, 2),
 						1
 				).ignoreVines().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_08_UNDER_260_075,
 								MOSS_MOSSY
 						)).dirt(BlockStateProvider.simple(Blocks.DIRT)).build()
@@ -383,7 +396,7 @@ public final class WilderTreeConfigured {
 
 		SHORT_BIRCH.makeAndSetHolder(Feature.TREE,
 				shortBirch().decorators(
-						ImmutableList.of(
+						List.of(
 								SHELF_FUNGUS_006
 						)
 				).ignoreVines().build()
@@ -391,7 +404,7 @@ public final class WilderTreeConfigured {
 
 		SHORT_DYING_BIRCH.makeAndSetHolder(Feature.TREE,
 				shortBirch().decorators(
-						ImmutableList.of(
+						List.of(
 								SHELF_FUNGUS_006,
 								VINES_1_UNDER_260_03
 						)
@@ -400,7 +413,7 @@ public final class WilderTreeConfigured {
 
 		SUPER_BIRCH_BEES.makeAndSetHolder(Feature.TREE,
 				superBirch().decorators(
-						ImmutableList.of(
+						List.of(
 								BEES,
 								POLLEN_025
 						)
@@ -411,11 +424,28 @@ public final class WilderTreeConfigured {
 				superBirch().build()
 		);
 
+		SNAPPED_BIRCH.makeAndSetHolder(Feature.TREE,
+			snappedTrunkBuilder(
+				Blocks.BIRCH_LOG,
+				Blocks.BIRCH_LEAVES,
+				2,
+				1,
+				1
+			).decorators(
+				List.of(
+					VINES_012_UNDER_260,
+					MOSS_BIRCH,
+					SHELF_FUNGUS_007
+				)
+			).build()
+		);
+
+
 		// OAK
 
 		OAK.makeAndSetHolder(Feature.TREE,
 				oak().decorators(
-						ImmutableList.of(
+						List.of(
 								SHELF_FUNGUS_002
 						)
 				).build()
@@ -423,7 +453,7 @@ public final class WilderTreeConfigured {
 
 		SHORT_OAK.makeAndSetHolder(Feature.TREE,
 				shortOak().decorators(
-						ImmutableList.of(
+						List.of(
 								SHELF_FUNGUS_002
 						)
 				).build()
@@ -431,7 +461,7 @@ public final class WilderTreeConfigured {
 
 		OAK_BEES_0004.makeAndSetHolder(Feature.TREE,
 				oak().decorators(
-						ImmutableList.of(
+						List.of(
 								BEES_0004,
 								SHELF_FUNGUS_006,
 								POLLEN_01
@@ -441,7 +471,7 @@ public final class WilderTreeConfigured {
 
 		DYING_OAK.makeAndSetHolder(Feature.TREE,
 				oak().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_1_UNDER_260_03,
 								SHELF_FUNGUS_006
 						)
@@ -450,7 +480,7 @@ public final class WilderTreeConfigured {
 
 		FANCY_OAK.makeAndSetHolder(Feature.TREE,
 				fancyOak().decorators(
-						ImmutableList.of(
+						List.of(
 								SHELF_FUNGUS_002
 						)
 				).build()
@@ -458,7 +488,7 @@ public final class WilderTreeConfigured {
 
 		FANCY_DYING_OAK.makeAndSetHolder(Feature.TREE,
 				fancyOak().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_1_UNDER_260_05,
 								SHELF_FUNGUS_007
 						)
@@ -467,7 +497,7 @@ public final class WilderTreeConfigured {
 
 		FANCY_DYING_OAK_BEES_0004.makeAndSetHolder(Feature.TREE,
 				fancyOak().decorators(
-						ImmutableList.of(
+						List.of(
 								BEES_0004,
 								VINES_1_UNDER_260_05,
 								POLLEN_01,
@@ -478,7 +508,7 @@ public final class WilderTreeConfigured {
 
 		FANCY_OAK_BEES_0004.makeAndSetHolder(Feature.TREE,
 				fancyOak().decorators(
-						ImmutableList.of(
+						List.of(
 								BEES_0004,
 								POLLEN_01,
 								SHELF_FUNGUS_002
@@ -488,7 +518,7 @@ public final class WilderTreeConfigured {
 
 		FANCY_DYING_OAK_BEES_025.makeAndSetHolder(Feature.TREE,
 				fancyOak().decorators(
-						ImmutableList.of(
+						List.of(
 								BEES_025,
 								VINES_1_UNDER_260_05,
 								POLLEN_01,
@@ -499,7 +529,7 @@ public final class WilderTreeConfigured {
 
 		FANCY_OAK_BEES_025.makeAndSetHolder(Feature.TREE,
 				fancyOak().decorators(
-						ImmutableList.of(
+						List.of(
 								BEES_025,
 								POLLEN_01,
 								SHELF_FUNGUS_002
@@ -509,7 +539,7 @@ public final class WilderTreeConfigured {
 
 		FALLEN_OAK_TREE.makeAndSetHolder(Feature.TREE,
 				fallenOak().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_08_UNDER_260_075,
 								MOSS_OAK
 						)
@@ -518,7 +548,7 @@ public final class WilderTreeConfigured {
 
 		FALLEN_OAK_TREE_NO_MOSS.makeAndSetHolder(Feature.TREE,
 				fallenOak().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_012_UNDER_260
 						)
 				).dirt(BlockStateProvider.simple(Blocks.DIRT)).build()
@@ -526,7 +556,7 @@ public final class WilderTreeConfigured {
 
 		MOSSY_FALLEN_OAK_TREE.makeAndSetHolder(Feature.TREE,
 				fallenTrunkBuilder(
-						RegisterBlocks.HOLLOWED_OAK_LOG,
+						Blocks.OAK_LOG,
 						Blocks.OAK_LEAVES,
 						3,
 						1,
@@ -536,7 +566,7 @@ public final class WilderTreeConfigured {
 						UniformInt.of(1, 2),
 						1
 				).ignoreVines().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_08_UNDER_260_075,
 								MOSS_MOSSY
 						)
@@ -545,7 +575,7 @@ public final class WilderTreeConfigured {
 
 		MOSSY_FALLEN_STRAIGHT_OAK_TREE.makeAndSetHolder(Feature.TREE,
 				fallenTrunkBuilder(
-						RegisterBlocks.HOLLOWED_OAK_LOG,
+						Blocks.OAK_LOG,
 						Blocks.OAK_LEAVES,
 						3,
 						1,
@@ -555,7 +585,7 @@ public final class WilderTreeConfigured {
 						UniformInt.of(1, 2),
 						1
 				).ignoreVines().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_08_UNDER_260_075,
 								MOSS_MOSSY
 						)
@@ -564,7 +594,7 @@ public final class WilderTreeConfigured {
 
 		FANCY_OAK_BEES.makeAndSetHolder(Feature.TREE,
 				fancyOak().decorators(
-						ImmutableList.of(
+						List.of(
 								BEES,
 								POLLEN_025,
 								SHELF_FUNGUS_002
@@ -581,12 +611,28 @@ public final class WilderTreeConfigured {
 						),
 						new TwoLayersFeatureSize(0, 0, 0, OptionalInt.of(4))
 				).ignoreVines().decorators(
-						ImmutableList.of(
+						List.of(
 								BEES_0004,
 								VINES_1_UNDER_260_05,
 								POLLEN_01
 						)
 				).build()
+		);
+
+		SNAPPED_OAK.makeAndSetHolder(Feature.TREE,
+			snappedTrunkBuilder(
+				Blocks.OAK_LOG,
+				Blocks.OAK_LEAVES,
+				2,
+				1,
+				1
+			).decorators(
+				List.of(
+					VINES_012_UNDER_260,
+					MOSS_OAK,
+					SHELF_FUNGUS_007
+				)
+			).build()
 		);
 
 		// DARK OAK
@@ -599,7 +645,7 @@ public final class WilderTreeConfigured {
 						new DarkOakFoliagePlacer(ConstantInt.of(0), ConstantInt.of(0)),
 						new ThreeLayersFeatureSize(1, 1, 0, 1, 2, OptionalInt.empty())
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_1_UNDER_260_05,
 								SHELF_FUNGUS_006
 						)
@@ -608,7 +654,7 @@ public final class WilderTreeConfigured {
 
 		TALL_DARK_OAK.makeAndSetHolder(Feature.TREE,
 				tallDarkOak().decorators(
-						ImmutableList.of(
+						List.of(
 								SHELF_FUNGUS_002
 						)
 				).ignoreVines().build()
@@ -616,7 +662,7 @@ public final class WilderTreeConfigured {
 
 		FANCY_TALL_DARK_OAK.makeAndSetHolder(Feature.TREE,
 				fancyTallDarkOak().decorators(
-						ImmutableList.of(
+						List.of(
 								SHELF_FUNGUS_002
 						)
 				).ignoreVines().build()
@@ -624,7 +670,7 @@ public final class WilderTreeConfigured {
 
 		DYING_TALL_DARK_OAK.makeAndSetHolder(Feature.TREE,
 				tallDarkOak().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_1_UNDER_260_05,
 								SHELF_FUNGUS_007
 						)
@@ -633,7 +679,7 @@ public final class WilderTreeConfigured {
 
 		DYING_FANCY_TALL_DARK_OAK.makeAndSetHolder(Feature.TREE,
 				fancyTallDarkOak().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_1_UNDER_260_05,
 								SHELF_FUNGUS_007
 						)
@@ -642,15 +688,16 @@ public final class WilderTreeConfigured {
 
 		COBWEB_TALL_DARK_OAK.makeAndSetHolder(Feature.TREE,
 				tallDarkOak().decorators(
-						ImmutableList.of(
+						List.of(
 								COBWEB_1_UNDER_260_025,
 								SHELF_FUNGUS_002
 						)
 				).ignoreVines().build()
 		);
+
 		COBWEB_FANCY_TALL_DARK_OAK.makeAndSetHolder(Feature.TREE,
 				fancyTallDarkOak().decorators(
-						ImmutableList.of(
+						List.of(
 								COBWEB_1_UNDER_260_025,
 								SHELF_FUNGUS_002
 						)
@@ -690,7 +737,7 @@ public final class WilderTreeConfigured {
 						),
 						new TwoLayersFeatureSize(2, 0, 2)
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								new LeaveVineDecorator(0.125F),
 								SHELF_FUNGUS_007
 						)
@@ -710,7 +757,7 @@ public final class WilderTreeConfigured {
 								UniformInt.of(2, 3)
 						),
 						new TwoLayersFeatureSize(2, 0, 2)
-				).decorators(ImmutableList.of(SHELF_FUNGUS_006_ONLY_BROWN)).ignoreVines().build()
+				).decorators(List.of(SHELF_FUNGUS_006_ONLY_BROWN)).ignoreVines().build()
 		);
 
 		SPRUCE_SHORT.makeAndSetHolder(Feature.TREE,
@@ -738,7 +785,7 @@ public final class WilderTreeConfigured {
 						),
 						new TwoLayersFeatureSize(2, 0, 2))
 						.decorators(
-								ImmutableList.of(
+								List.of(
 										SHELF_FUNGUS_006_ONLY_BROWN
 								)
 						).ignoreVines().build()
@@ -756,7 +803,7 @@ public final class WilderTreeConfigured {
 						),
 						new TwoLayersFeatureSize(2, 0, 2)
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								SHELF_FUNGUS_006_ONLY_BROWN,
 								VINES_1_UNDER_260_05
 						)
@@ -775,7 +822,7 @@ public final class WilderTreeConfigured {
 						),
 						new TwoLayersFeatureSize(1, 1, 2))
 						.decorators(
-								ImmutableList.of(
+								List.of(
 										new AlterGroundDecorator(BlockStateProvider.simple(Blocks.PODZOL)), SHELF_FUNGUS_006_ONLY_BROWN
 								)
 						).build()
@@ -792,7 +839,7 @@ public final class WilderTreeConfigured {
 								UniformInt.of(3, 7)
 						),
 						new TwoLayersFeatureSize(1, 1, 2))
-						.decorators(ImmutableList.of(new AlterGroundDecorator(BlockStateProvider.simple(Blocks.PODZOL)), SHELF_FUNGUS_006_ONLY_BROWN)).build()
+						.decorators(List.of(new AlterGroundDecorator(BlockStateProvider.simple(Blocks.PODZOL)), SHELF_FUNGUS_006_ONLY_BROWN)).build()
 		);
 
 		DYING_MEGA_FUNGUS_PINE.makeAndSetHolder(Feature.TREE,
@@ -803,7 +850,7 @@ public final class WilderTreeConfigured {
 						new MegaPineFoliagePlacer(ConstantInt.of(0), ConstantInt.of(0), UniformInt.of(3, 7)),
 						new TwoLayersFeatureSize(1, 1, 2)
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								new AlterGroundDecorator(BlockStateProvider.simple(Blocks.PODZOL)),
 								SHELF_FUNGUS_006_ONLY_BROWN,
 								VINES_1_UNDER_260_075
@@ -813,16 +860,16 @@ public final class WilderTreeConfigured {
 
 		FALLEN_SPRUCE_TREE.makeAndSetHolder(Feature.TREE,
 				fallenSpruce().decorators(
-						ImmutableList.of(
-								VINES_1_UNDER_260_075,
-								MOSS_SPRUCE_PALM
+						List.of(
+							VINES_1_UNDER_260_075,
+							MOSS_SPRUCE_PALM
 						)
 				).dirt(BlockStateProvider.simple(Blocks.DIRT)).build()
 		);
 
 		MOSSY_FALLEN_SPRUCE_TREE.makeAndSetHolder(Feature.TREE,
 				fallenTrunkBuilder(
-						RegisterBlocks.HOLLOWED_SPRUCE_LOG,
+						Blocks.SPRUCE_LOG,
 						Blocks.SPRUCE_LEAVES,
 						5,
 						1,
@@ -832,9 +879,9 @@ public final class WilderTreeConfigured {
 						UniformInt.of(1, 2),
 						1
 				).ignoreVines().decorators(
-						ImmutableList.of(
-								VINES_08_UNDER_260_075,
-								MOSS_MOSSY
+						List.of(
+							VINES_08_UNDER_260_075,
+							MOSS_MOSSY
 						)
 				).dirt(BlockStateProvider.simple(Blocks.DIRT)).build()
 		);
@@ -847,7 +894,7 @@ public final class WilderTreeConfigured {
 						new MegaPineFoliagePlacer(ConstantInt.of(0), ConstantInt.of(0), UniformInt.of(11, 14)),
 						new TwoLayersFeatureSize(1, 1, 2)
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								SHELF_FUNGUS_006_ONLY_BROWN
 						)
 				).build()
@@ -861,9 +908,9 @@ public final class WilderTreeConfigured {
 						new MegaPineFoliagePlacer(ConstantInt.of(0), ConstantInt.of(0), UniformInt.of(11, 14)),
 						new TwoLayersFeatureSize(1, 1, 2))
 						.decorators(
-								ImmutableList.of(
-										SHELF_FUNGUS_006_ONLY_BROWN,
-										SHELF_FUNGUS_006_ONLY_BROWN
+								List.of(
+									SHELF_FUNGUS_006_ONLY_BROWN,
+									SHELF_FUNGUS_006_ONLY_BROWN
 								)
 						).build()
 		);
@@ -876,10 +923,10 @@ public final class WilderTreeConfigured {
 						new MegaPineFoliagePlacer(ConstantInt.of(0), ConstantInt.of(0), UniformInt.of(11, 14)),
 						new TwoLayersFeatureSize(1, 1, 2)
 				).decorators(
-						ImmutableList.of(
-								SHELF_FUNGUS_006_ONLY_BROWN,
-								SHELF_FUNGUS_006_ONLY_BROWN,
-								VINES_1_UNDER_260_075
+						List.of(
+							SHELF_FUNGUS_006_ONLY_BROWN,
+							SHELF_FUNGUS_006_ONLY_BROWN,
+							VINES_1_UNDER_260_075
 						)
 				).build()
 		);
@@ -891,11 +938,27 @@ public final class WilderTreeConfigured {
 						new MegaPineFoliagePlacer(ConstantInt.of(0), ConstantInt.of(0), UniformInt.of(11, 14)),
 						new TwoLayersFeatureSize(1, 1, 2)
 				).decorators(
-						ImmutableList.of(
-								SHELF_FUNGUS_006_ONLY_BROWN,
-								VINES_1_UNDER_260_075
+						List.of(
+							SHELF_FUNGUS_006_ONLY_BROWN,
+							VINES_1_UNDER_260_075
 						)
 				).build()
+		);
+
+		SNAPPED_SPRUCE.makeAndSetHolder(Feature.TREE,
+			snappedTrunkBuilder(
+				Blocks.SPRUCE_LOG,
+				Blocks.SPRUCE_LEAVES,
+				2,
+				1,
+				1
+			).decorators(
+				List.of(
+					VINES_012_UNDER_260,
+					MOSS_SPRUCE_PALM,
+					SHELF_FUNGUS_006_ONLY_BROWN
+				)
+			).build()
 		);
 
 		// BAOBAB
@@ -908,7 +971,7 @@ public final class WilderTreeConfigured {
 						new AcaciaFoliagePlacer(ConstantInt.of(2), ConstantInt.of(0)),
 						new TwoLayersFeatureSize(1, 0, 2)
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								new AttachedToLeavesDecorator(
 										0.065F,
 										1,
@@ -919,7 +982,7 @@ public final class WilderTreeConfigured {
 												UniformInt.of(0, 2)
 										),
 										4,
-										ImmutableList.of(
+										List.of(
 												Direction.DOWN
 										)
 								)
@@ -935,7 +998,7 @@ public final class WilderTreeConfigured {
 						new AcaciaFoliagePlacer(ConstantInt.of(2), ConstantInt.of(0)),
 						new TwoLayersFeatureSize(1, 0, 2)
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								new AttachedToLeavesDecorator(
 										0.065F,
 										1,
@@ -947,7 +1010,7 @@ public final class WilderTreeConfigured {
 												UniformInt.of(0, 2)
 										),
 										4,
-										ImmutableList.of(
+										List.of(
 												Direction.DOWN
 										)
 								)
@@ -965,7 +1028,7 @@ public final class WilderTreeConfigured {
 						new SpruceFoliagePlacer(ConstantInt.of(1), UniformInt.of(1, 3), UniformInt.of(4, 6)),
 						new TwoLayersFeatureSize(2, 1, 2)
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_012_UNDER_76
 						)
 				).ignoreVines().build()
@@ -973,7 +1036,7 @@ public final class WilderTreeConfigured {
 
 		FALLEN_CYPRESS_TREE.makeAndSetHolder(Feature.TREE,
 				fallenCypress().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_008_UNDER_82,
 								MOSS_CYPRESS
 						)
@@ -988,7 +1051,7 @@ public final class WilderTreeConfigured {
 						new SpruceFoliagePlacer(ConstantInt.of(1), UniformInt.of(1, 3), UniformInt.of(6, 8)),
 						new TwoLayersFeatureSize(2, 1, 2)
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								SHELF_FUNGUS_006_ONLY_BROWN,
 								VINES_008_UNDER_82
 						)
@@ -1003,7 +1066,7 @@ public final class WilderTreeConfigured {
 						new SpruceFoliagePlacer(ConstantInt.of(1), UniformInt.of(1, 3), UniformInt.of(4, 6)),
 						new TwoLayersFeatureSize(2, 1, 2)
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_012_UNDER_76
 						)
 				).ignoreVines().build()
@@ -1017,7 +1080,7 @@ public final class WilderTreeConfigured {
 						new SpruceFoliagePlacer(ConstantInt.of(1), UniformInt.of(1, 3), UniformInt.of(6, 8)),
 						new TwoLayersFeatureSize(2, 1, 2)
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								SHELF_FUNGUS_006_ONLY_BROWN,
 								VINES_008_UNDER_82
 						)
@@ -1040,12 +1103,28 @@ public final class WilderTreeConfigured {
 						new RandomSpreadFoliagePlacer(ConstantInt.of(2), ConstantInt.of(1), ConstantInt.of(2), 14),
 						new TwoLayersFeatureSize(1, 0, 1)
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								new LeaveVineDecorator(0.1F),
 								SHELF_FUNGUS_006_ONLY_BROWN,
 								VINES_008_UNDER_82
 						)
 				).build()
+		);
+
+		SNAPPED_CYPRESS.makeAndSetHolder(Feature.TREE,
+			snappedTrunkBuilder(
+				RegisterBlocks.CYPRESS_LOG,
+				RegisterBlocks.CYPRESS_LEAVES,
+				2,
+				1,
+				1
+			).decorators(
+				List.of(
+					VINES_012_UNDER_260,
+					MOSS_CYPRESS,
+					SHELF_FUNGUS_006_ONLY_BROWN
+				)
+			).build()
 		);
 
 		// BIG SHRUB
@@ -1073,7 +1152,7 @@ public final class WilderTreeConfigured {
 						4,
 						9
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								new LeavesAroundTopTreeDecorator(
 										0.25F,
 										0,
@@ -1084,7 +1163,7 @@ public final class WilderTreeConfigured {
 												ConstantInt.of(0)
 										),
 										4,
-										ImmutableList.of(
+										List.of(
 												Direction.DOWN
 										)
 								)
@@ -1104,7 +1183,7 @@ public final class WilderTreeConfigured {
 						5,
 						10
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								new LeavesAroundTopTreeDecorator(
 										0.25F,
 										0,
@@ -1115,7 +1194,7 @@ public final class WilderTreeConfigured {
 												ConstantInt.of(0)
 										),
 										4,
-										ImmutableList.of(
+										List.of(
 												Direction.DOWN
 										)
 								)
@@ -1143,7 +1222,7 @@ public final class WilderTreeConfigured {
 						3,
 						2
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								new LeavesAroundTopTreeDecorator(
 										0.3F,
 										0,
@@ -1154,7 +1233,7 @@ public final class WilderTreeConfigured {
 												ConstantInt.of(0)
 										),
 										4,
-										ImmutableList.of(
+										List.of(
 												Direction.DOWN
 										)
 								)
@@ -1164,7 +1243,7 @@ public final class WilderTreeConfigured {
 
 		FALLEN_PALM.makeAndSetHolder(Feature.TREE,
 				fallenPalm().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_08_UNDER_260_075,
 								MOSS_SPRUCE_PALM
 						)
@@ -1194,26 +1273,57 @@ public final class WilderTreeConfigured {
 		//JUNGLE
 		FALLEN_JUNGLE_TREE.makeAndSetHolder(Feature.TREE,
 				fallenJungle().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_08_UNDER_260_075,
 								MOSS_JUNGLE
 						)
 				).dirt(BlockStateProvider.simple(Blocks.DIRT)).build()
 		);
 
+		SNAPPED_JUNGLE.makeAndSetHolder(Feature.TREE,
+			snappedTrunkBuilder(
+				Blocks.JUNGLE_LOG,
+				Blocks.JUNGLE_LEAVES,
+				2,
+				1,
+				1
+			).decorators(
+				List.of(
+					VINES_012_UNDER_260,
+					MOSS_JUNGLE,
+					SHELF_FUNGUS_007
+				)
+			).build()
+		);
+
 		//ACACIA
 		FALLEN_ACACIA_TREE.makeAndSetHolder(Feature.TREE,
 				fallenAcacia().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_012_UNDER_260
 						)
 				).dirt(BlockStateProvider.simple(Blocks.DIRT)).build()
 		);
 
+		SNAPPED_ACACIA.makeAndSetHolder(Feature.TREE,
+			snappedTrunkBuilder(
+				Blocks.ACACIA_LOG,
+				Blocks.ACACIA_LEAVES,
+				2,
+				1,
+				1
+			).decorators(
+				List.of(
+					VINES_012_UNDER_260,
+					SHELF_FUNGUS_006_ONLY_BROWN
+				)
+			).build()
+		);
+
 		//MANGROVE
 		FALLEN_MANGROVE_TREE.makeAndSetHolder(Feature.TREE,
 				fallenMangrove().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_012_UNDER_260,
 								MOSS_MOSSY
 						)
@@ -1256,6 +1366,12 @@ public final class WilderTreeConfigured {
 				new TwoLayersFeatureSize(1, 0, 1));
 	}
 
+	private static TreeConfiguration.TreeConfigurationBuilder snappedTrunkBuilder(Block log, Block leaves, int baseHeight, int firstRHeight, int secondRHeight) {
+		return new TreeConfiguration.TreeConfigurationBuilder(BlockStateProvider.simple(log), new SnappedTrunkPlacer(baseHeight, firstRHeight, secondRHeight),
+			BlockStateProvider.simple(leaves), new BlobFoliagePlacer(ConstantInt.of(1), ConstantInt.of(0), 3), //FOILAGE PLACER DOES NOTHING
+			new TwoLayersFeatureSize(1, 0, 1));
+	}
+
     private static TreeConfiguration.TreeConfigurationBuilder birch() {
         return builder(Blocks.BIRCH_LOG, Blocks.BIRCH_LEAVES, 8, 5, 4, 0.15F, UniformInt.of(1, 2), UniformInt.of(1, 3), ConstantInt.of(1), 2).ignoreVines();
     }
@@ -1269,7 +1385,7 @@ public final class WilderTreeConfigured {
     }
 
     private static TreeConfiguration.TreeConfigurationBuilder fallenBirch() {
-        return fallenTrunkBuilder(RegisterBlocks.HOLLOWED_BIRCH_LOG, Blocks.BIRCH_LEAVES, 3, 1, 2, 0.15F, UniformInt.of(1, 2), UniformInt.of(1, 2), 1).ignoreVines();
+        return fallenTrunkBuilder(Blocks.BIRCH_LOG, Blocks.BIRCH_LEAVES, 3, 1, 2, 0.15F, UniformInt.of(1, 2), UniformInt.of(1, 2), 1).ignoreVines();
     }
 
     private static TreeConfiguration.TreeConfigurationBuilder oak() {
@@ -1285,11 +1401,11 @@ public final class WilderTreeConfigured {
     }
 
     private static TreeConfiguration.TreeConfigurationBuilder fallenOak() {
-        return fallenTrunkBuilder(RegisterBlocks.HOLLOWED_OAK_LOG, Blocks.OAK_LEAVES, 3, 1, 2, 0.15F, UniformInt.of(1, 2), UniformInt.of(1, 2), 1).ignoreVines();
+        return fallenTrunkBuilder(Blocks.OAK_LOG, Blocks.OAK_LEAVES, 3, 1, 2, 0.15F, UniformInt.of(1, 2), UniformInt.of(1, 2), 1).ignoreVines();
     }
 
     private static TreeConfiguration.TreeConfigurationBuilder fallenCypress() {
-        return fallenTrunkBuilder(RegisterBlocks.HOLLOWED_CYPRESS_LOG, RegisterBlocks.CYPRESS_LEAVES, 3, 2, 2, 0.0F, UniformInt.of(1, 2), UniformInt.of(1, 2), 1).ignoreVines();
+        return fallenTrunkBuilder(RegisterBlocks.CYPRESS_LOG, RegisterBlocks.CYPRESS_LEAVES, 3, 2, 2, 0.0F, UniformInt.of(1, 2), UniformInt.of(1, 2), 1).ignoreVines();
     }
 
     private static TreeConfiguration.TreeConfigurationBuilder tallDarkOak() {
@@ -1301,22 +1417,22 @@ public final class WilderTreeConfigured {
 	}
 
     private static TreeConfiguration.TreeConfigurationBuilder fallenSpruce() {
-		return fallenTrunkBuilder(RegisterBlocks.HOLLOWED_SPRUCE_LOG, Blocks.SPRUCE_LEAVES, 5, 1, 2, 0.0F, UniformInt.of(1, 2), UniformInt.of(1, 2), 1).ignoreVines();
+		return fallenTrunkBuilder(Blocks.SPRUCE_LOG, Blocks.SPRUCE_LEAVES, 5, 1, 2, 0.0F, UniformInt.of(1, 2), UniformInt.of(1, 2), 1).ignoreVines();
 	}
 
 	private static TreeConfiguration.TreeConfigurationBuilder fallenPalm() {
-		return fallenTrunkBuilder(RegisterBlocks.HOLLOWED_PALM_LOG, RegisterBlocks.PALM_FRONDS, 5, 1, 2, 0.0F, UniformInt.of(1, 2), UniformInt.of(1, 2), 1).ignoreVines();
+		return fallenTrunkBuilder(RegisterBlocks.PALM_LOG, RegisterBlocks.PALM_FRONDS, 5, 1, 2, 0.0F, UniformInt.of(1, 2), UniformInt.of(1, 2), 1).ignoreVines();
 	}
 
 	private static TreeConfiguration.TreeConfigurationBuilder fallenAcacia() {
-		return fallenTrunkBuilder(RegisterBlocks.HOLLOWED_ACACIA_LOG, Blocks.ACACIA_LEAVES, 3, 1, 1, 0.0F, ConstantInt.of(1), UniformInt.of(1, 2), 1).ignoreVines();
+		return fallenTrunkBuilder(Blocks.ACACIA_LOG, Blocks.ACACIA_LEAVES, 3, 1, 1, 0.0F, ConstantInt.of(1), UniformInt.of(1, 2), 1).ignoreVines();
 	}
 
 	private static TreeConfiguration.TreeConfigurationBuilder fallenJungle() {
-		return fallenTrunkBuilder(RegisterBlocks.HOLLOWED_JUNGLE_LOG, Blocks.JUNGLE_LEAVES, 4, 2, 1, 0.0F, UniformInt.of(1, 2), UniformInt.of(1, 2), 1).ignoreVines();
+		return fallenTrunkBuilder(Blocks.JUNGLE_LOG, Blocks.JUNGLE_LEAVES, 4, 2, 1, 0.0F, UniformInt.of(1, 2), UniformInt.of(1, 2), 1).ignoreVines();
 	}
 
 	private static TreeConfiguration.TreeConfigurationBuilder fallenMangrove() {
-		return fallenTrunkBuilder(RegisterBlocks.HOLLOWED_MANGROVE_LOG, Blocks.MANGROVE_LEAVES, 4, 2, 1, 0.0F, ConstantInt.of(1), UniformInt.of(1, 2), 1).ignoreVines();
+		return fallenTrunkBuilder(Blocks.MANGROVE_LOG, Blocks.MANGROVE_LEAVES, 4, 2, 1, 0.0F, ConstantInt.of(1), UniformInt.of(1, 2), 1).ignoreVines();
 	}
 }
